<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.stefancouture.programmerdevtools.SearchData">

    <LinearLayout android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:id="@+id/tableName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table_name"
            android:textStyle="bold"
            android:textSize="25sp"/>

        <TextView android:id="@+id/sqlTableName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/students"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_alignParentTop="true" />
    </LinearLayout>

    <TextView android:id="@+id/table_contents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tablecontents"
        android:textStyle="bold"
        android:layout_below="@+id/line1"
        android:layout_marginTop="30dp"
        android:layout_centerInParent="true"
        android:textSize="25dp" />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/table_contents"
        android:layout_marginTop="20dp">

        <TableRow>
            <TextView
                android:text="@string/int_word"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="2dip"
                android:layout_weight="1"
                android:background="@color/lightgray"
                />
            <TextView
                android:text="@string/string_word"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:layout_margin="2dip"
                android:layout_weight="1"
                android:background="@color/lightgray" />
            <TextView
                android:text="@string/string_word"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:layout_margin="2dip"
                android:layout_weight="1"
                android:background="@color/lightgray"
                />

            <TextView
                android:text="@string/double_word"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:layout_margin="2dip"
                android:layout_weight="1"
                android:background="@color/lightgray"
                />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/StudNum"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="2dip"
                android:layout_weight="1"
                android:background="@color/beige"
                />
            <TextView
                android:text="@string/Fname"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:layout_margin="2dip"
                android:layout_weight="1"
                android:background="@color/beige" />
            <TextView
                android:text="@string/Lname"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:layout_margin="2dip"
                android:layout_weight="1"
                android:background="@color/beige"
                />
            <TextView
                android:text="@string/gpa"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:layout_margin="2dip"
                android:layout_weight="1"
                android:background="@color/beige"
                />
        </TableRow>
    </TableLayout>

    <LinearLayout android:id="@+id/line2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_below="@+id/table">

        <TextView android:id="@+id/sqlStatement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sqlStatement"
            android:textStyle="bold"
            android:textSize="25sp"/>

        <EditText android:id="@+id/sqlUserStatement_searchData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:hint = "@string/enter_here"
            android:layout_alignParentTop="true"
            android:inputType = "textMultiLine"
            android:maxLines="3"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:layout_below="@+id/line2"
        android:layout_marginTop="50dp"
        android:gravity="center">

        <Button
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchData"
            android:theme="@style/searchButton"
            android:layout_marginLeft="50dp"
            android:drawableLeft="@drawable/search"
            android:onClick="search"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:theme="@style/removeButton"
            android:layout_marginLeft="30dp"
            android:drawableLeft="@drawable/delete"
            android:textAllCaps="false"
            android:onClick="cancel"/>

    </LinearLayout>

    <TextView android:id="@+id/search_data_version"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:text="@string/version"/>


</RelativeLayout>