<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view_table"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.stefancouture.programmerdevtools.ViewTable">

    <LinearLayout android:id="@+id/line1_viewTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:id="@+id/tableName_viewTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table_name"
            android:textStyle="bold"
            android:textSize="25sp"/>

        <TextView android:id="@+id/sqlTableName_viewTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/students"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_alignParentTop="true" />
    </LinearLayout>

    <LinearLayout android:id="@+id/line2_viewTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/line1_viewTable"
        android:layout_marginTop="50dp">

        <TextView android:id="@+id/rowsToDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rowsToDisplay"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <Spinner android:id="@+id/rowsToDisplay_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:layout_alignParentTop="true"
            />

    </LinearLayout>

    <LinearLayout android:id="@+id/line3_viewTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/line2_viewTable"
        android:layout_marginTop="100dp">

        <TextView android:id="@+id/sortByColumns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sortBy"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <Spinner android:id="@+id/sortByColumns_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_alignParentTop="true" />

        <Spinner android:id="@+id/ascDesc_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_alignParentTop="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:layout_below="@+id/line3_viewTable"
        android:layout_marginTop="100dp"
        android:gravity="center">

        <Button
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view"
            android:theme="@style/infoButton"
            android:layout_marginLeft="50dp"
            android:drawableLeft="@drawable/view"
            android:onClick="showTableContents"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:theme="@style/removeButton"
            android:layout_marginLeft="30dp"
            android:drawableLeft="@drawable/delete"
            android:textAllCaps="false"
            android:onClick="cancel"/>

    </LinearLayout>


    <TextView android:id="@+id/viewTable_version"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:text="@string/version"/>
</RelativeLayout>