<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sql_homepage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.stefancouture.programmerdevtools.SqlMainPage">

    <TextView android:id="@+id/desc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sql_description"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <TextView android:id="@+id/sqlconverterText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:text="@string/version"/>

    <Button android:id="@+id/viewTable"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:theme="@style/infoButton"
        android:layout_marginTop="48dp"
        android:text="@string/viewTable"
        android:layout_below="@+id/desc_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:drawableLeft="@drawable/view"
        android:textAllCaps="false"
        android:onClick="viewTable"/>

    <Button android:id="@+id/view_help"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/help"
        android:paddingBottom="20dp"
        android:layout_marginRight="100dp"
        android:layout_alignBaseline="@+id/viewTable"
        android:layout_alignParentRight="true"
        android:onClick="viewDataInformation"/>

    <Button android:id="@+id/searchData"
        android:layout_width="154dp"
        android:layout_height="45dp"
        android:theme="@style/searchButton"
        android:layout_marginTop="20dp"
        android:text="@string/searchData"
        android:layout_below="@+id/viewTable"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:drawableLeft="@drawable/search"
        android:textAllCaps="false"/>

    <Button android:id="@+id/search_help"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/help"
        android:paddingBottom="20dp"
        android:layout_marginRight="100dp"
        android:layout_alignBaseline="@+id/searchData"
        android:layout_alignParentRight="true" />

    <Button android:id="@+id/addData"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:theme="@style/addButton"
        android:layout_marginTop="20dp"
        android:text="@string/addData"
        android:layout_below="@+id/searchData"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:drawableLeft="@drawable/add"
        android:textAllCaps="false"
        android:onClick="addData"/>

    <Button android:id="@+id/insert_help"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/help"
        android:paddingBottom="20dp"
        android:layout_marginRight="100dp"
        android:layout_alignBaseline="@+id/addData"
        android:layout_alignParentRight="true"
        android:onClick="insertInformation"/>

    <Button android:id="@+id/removeData"
        android:layout_width="154dp"
        android:layout_height="45dp"
        android:theme="@style/removeButton"
        android:layout_marginTop="20dp"
        android:text="@string/removeData"
        android:layout_below="@+id/addData"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:drawableLeft="@drawable/delete"
        android:textAllCaps="false"/>

    <Button android:id="@+id/remove_help"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/help"
        android:paddingBottom="20dp"
        android:layout_marginRight="100dp"
        android:layout_alignBaseline="@+id/removeData"
        android:layout_alignParentRight="true" />


</RelativeLayout>